# tristero

./: cabal.project  hie.yaml  readme.md  tristero.cabal
src/: Box.hs  Nucleus.hs  Shell.hs  Stream.hs  Tristero.hs
