cabal-version: 2.4
name:          tristero
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/tristero#readme
bug-reports: https://github.com/tonyday567/tristero/issues
build-type: Simple
tested-with: GHC == 8.10.4
source-repository head
  type: git
  location: https://github.com/tonyday567/tristero

common common-options
  build-depends:
    base >=4.7 && <5,
    profunctors >= 6,
    distributive >= 1,
    transformers >=0.5.6,
    hkd,
  default-language:
    Haskell2010

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie

library
  import: common-options
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
  exposed-modules:
    Tristero,
    Box,
    Nucleus
